--- a/LoginFormBackend/user_management/templates/index.html
+++ b/LoginFormBackend/user_management/templates/index.html
@@ -6,6 +6,35 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div>
+            <form>
+                <img src="hello.jpg">
+                <h1>EVENT TITLE<h1>
+                <p>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt. about us page text goes here..Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                
+                <label for="name">Name:</label><br>
+                <input type="text" id="name" name="name"><br>
+                
+                <label for="roll">Roll Number:</label><br>
+                <input type="number" id="roll" name="roll"><br>
+                
+                <label for="cars">Pick your Year:</label><br>
+                <select id="year" name="year">
+                    <option value="first">First</option>
+                    <option value="second">Second</option>
+                    <option value="third">Third</option>
+                    <option value="fourth">Fourth</option>
+                </select><br>
+                
+                <label for="info">Information:</label><br>
+                <textarea name="info" rows="10" cols="30"></textarea>
+
+            </form>  
+        </div>
+
+        <footer>
+            <p>Creative Computing Society</p>
+            <p><a href="ccs@thapar.edu">ccs@thapar.edu</a></p>
+        </footer>
 </body>
 </html>
