--- a/LoginFormBackend/user_management/templates/index.html
+++ b/LoginFormBackend/user_management/templates/index.html
@@ -10,7 +10,7 @@
             <form>
                 <img src="hello.jpg">
                 <h1>EVENT TITLE<h1>
-                <p>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt. about us page text goes here..Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                <p>Description: Creative Computing Society is one of the largest student-run societies of Thapar University, Patiala. Our main goal is to promote computer science among all the students of the university who come from diverse backgrounds and are studying diverse courses.</p>
                 
                 <label for="name">Name:</label><br>
                 <input type="text" id="name" name="name"><br>
@@ -18,7 +18,7 @@
                 <label for="roll">Roll Number:</label><br>
                 <input type="number" id="roll" name="roll"><br>
                 
-                <label for="cars">Pick your Year:</label><br>
+                <label for="year">Pick your Year:</label><br>
                 <select id="year" name="year">
                     <option value="first">First</option>
                     <option value="second">Second</option>
