--- a/LoginFormBackend/user_management/templates/index.html
+++ b/LoginFormBackend/user_management/templates/index.html
@@ -27,7 +27,7 @@
                 </select><br>
                 
                 <label for="info">Information:</label><br>
-                <textarea name="info" rows="10" cols="30"></textarea>
+                <textarea id="info" name="info" rows="10" cols="30"></textarea>
 
             </form>  
         </div>
