--- a/LoginFormBackend/user_management/templates/index.html
+++ b/LoginFormBackend/user_management/templates/index.html
@@ -9,7 +9,7 @@
     <div>
             <form>
                 <img src="hello.jpg">
-                <h1>EVENT TITLE<h1>
+                <h1>EVENT TITLE</h1>
                 <p>Description: Creative Computing Society is one of the largest student-run societies of Thapar University, Patiala. Our main goal is to promote computer science among all the students of the university who come from diverse backgrounds and are studying diverse courses.</p>
                 
                 <label for="name">Name:</label><br>
