--- a/form_maker/templates/index.html
+++ b/form_maker/templates/index.html
@@ -1,14 +1,16 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/style.css' %}">
     <title>Document</title>
 </head>
 <body>
     <div>
             <form>
-                <img src="hello.jpg">
+                <img src="hello.jpg" alt="...">
                 <h1>EVENT TITLE</h1>
                 <p>Description: Creative Computing Society is one of the largest student-run societies of Thapar University, Patiala. Our main goal is to promote computer science among all the students of the university who come from diverse backgrounds and are studying diverse courses.</p>
                 
