--- a/form_maker/static/assets/css/style.css
+++ b/form_maker/static/assets/css/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     background-color: rgb(180, 200, 235);
    border-style:solid;
    border-width:5px;
@@ -7,4 +7,4 @@ body {
    border-bottom-color: black;
    border-left-color: blue;
    border-right-color: blue;
-  }
+  } */
