--- a/form_maker/templates/index.html
+++ b/form_maker/templates/index.html
@@ -1,42 +1,66 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/style.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Document</title>
 </head>
+
 <body>
-    <div>
-            <form>
-                <img src="hello.jpg" alt="...">
-                <h1>EVENT TITLE</h1>
-                <p>Description: Creative Computing Society is one of the largest student-run societies of Thapar University, Patiala. Our main goal is to promote computer science among all the students of the university who come from diverse backgrounds and are studying diverse courses.</p>
-                
-                <label for="name">Name:</label><br>
-                <input type="text" id="name" name="name"><br>
-                
-                <label for="roll">Roll Number:</label><br>
-                <input type="number" id="roll" name="roll"><br>
-                
-                <label for="year">Pick your Year:</label><br>
-                <select id="year" name="year">
-                    <option value="first">First</option>
-                    <option value="second">Second</option>
-                    <option value="third">Third</option>
-                    <option value="fourth">Fourth</option>
-                </select><br>
-                
-                <label for="info">Information:</label><br>
-                <textarea id="info" name="info" rows="10" cols="30"></textarea>
+    <div class="container mt-5">
+        <form class="col-6 mx-auto p-3 card shadow-lg" method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            <h2>CCS FORM</h2>
+            <hr>
+            <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">NAME</label>
+                <input required="text" class="form-control" name="recipie_name">
+            </div>
+            
+            
+            
+            <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">ROLLNO</label>
+                <input required="text" class="form-control" name="recipie_name">
+            </div>
 
-            </form>  
-        </div>
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  BRANCH
+                </button>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">COE</a></li>
+                  <li><a class="dropdown-item" href="#">COBS</a></li>
+                  <li><a class="dropdown-item" href="#">CSE</a></li>
+                </ul>
+              </div>
 
-        <footer>
-            <p>Creative Computing Society</p>
-            <p><a href="ccs@thapar.edu">ccs@thapar.edu</a></p>
-        </footer>
+
+            <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Image</label>
+                <input name="recipie_image" type="file" class="form-control">
+            </div>
+
+            <button type="submit" class="btn btn-success">Submit</button>
+        </form>
+    </div>
+    
+    
+    
+    
+    
+    <footer>
+        <p>Creative Computing Society</p>
+        <p><a href="ccs@thapar.edu">ccs@thapar.edu</a></p>
+    </footer>
 </body>
+
 </html>
