--- a/form_maker/templates/index.html
+++ b/form_maker/templates/index.html
@@ -60,6 +60,31 @@
 
 
 
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <label class="form-check-label" for="flexCheckDefault">
+          Default checkbox
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+        <label class="form-check-label" for="flexCheckChecked">
+          Checked checkbox
+        </label>
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <div class="container mt-5">
         <form class="col-6 mx-auto p-3 card shadow-lg" method="post" enctype="multipart/form-data">
